added favicon, changed loading wheel color

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-html *
+*
 {
    font-family: Arial;
+   margin: 0;
 }
 
 
@@ -26,7 +27,10 @@ td{
 
 #options {
 	padding-bottom: 20px;
+    margin-bottom: 30px;
 }
+
+
 
 .select-style {
     border-bottom: 1px solid;
@@ -106,6 +110,10 @@ li{
 	height: 50px;
 }
 
+#questions {
+    padding-bottom: 30px;
+}
+
 .question-td{
 	border-left: none;
 	border-bottom-right-radius: 20px;
@@ -165,8 +173,8 @@ li{
 	margin-top: 10px;
 }
 
-/*Following code for loader and switch is from W3Schools.com*/
-/* Center the loader */
+
+
 #loader {
   position: absolute;
   left: 50%;
@@ -177,7 +185,7 @@ li{
   margin: -75px 0 0 -75px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid #ff001d;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
@@ -193,60 +201,14 @@ li{
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-/*
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-	margin-left: 10px;
+
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    color: white;
+    background-color: #ffd602;
+    margin-bottom: 0;
 }
 
-.switch input {display:none;}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders 
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}*/
